apps/arcs/beta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-beta
  labels:
    sage.arc: "enabled"
