apps/arcs/beta/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arc-beta
  namespace: arc-beta
spec:
  selector:
    app: arc-beta
  ports:
  - name: http
    port: 80
    targetPort: 5678
